--- a/index.html
+++ b/index.html
@@ -3,27 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nika Nanadze ფრაზების გენერატორი</title>
+    <title>ფრაზების გენერატორი</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: linear-gradient(120deg, #f6d365, #fda085);
+            background-color: #f4f4f9;
             text-align: center;
             margin: 0;
             padding: 0;
-            color: #fff;
+            color: #333;
         }
         header {
-            background-color: rgba(0, 0, 0, 0.6);
+            background-color: #4CAF50;
             color: white;
             padding: 20px;
         }
         h1 {
             margin: 0;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
         }
         .content {
-            margin-top: 50px;
+            margin-top: 30px;
         }
         .quote-box {
             font-size: 20px;
@@ -31,9 +30,10 @@
             margin: 20px auto;
             padding: 20px;
             max-width: 600px;
-            background: rgba(255, 255, 255, 0.8);
+            background: white;
             border-radius: 10px;
             color: #333;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             animation: fadeIn 1s ease-in-out;
         }
         button {
@@ -91,7 +91,7 @@
 </head>
 <body>
     <header>
-        <h1>Nika Nanadze ფრაზების გენერატორი</h1>
+        <h1>ფრაზების გენერატორი</h1>
         <p>დააჭირე ღილაკს და აღმოაჩინე ახალი ფრაზა!</p>
     </header>
     
@@ -101,13 +101,13 @@
         </div>
         <!-- ღილაკები -->
         <button onclick="generateQuote('motivation')">მოტივაცია</button>
-        <button onclick="generateQuote('funny')">სასაცილო</button>
+        <button onclick="generateQuote('funny')">პოზიტიური</button>
         <button onclick="generateQuote('facts')">ფაქტები</button>
         <button class="share-button" onclick="shareSite()">გაუზიარე</button>
     </div>
     
     <footer>
-        <p>© 2024 Nika Nanadze | ყველა უფლება დაცულია</p>
+        <p>© 2024 ფრაზების გენერატორი | ყველა უფლება დაცულია</p>
         <p class="small-text">Nika Nanadze production</p>
     </footer>
 
@@ -115,9 +115,9 @@
         // ფრაზების სია კატეგორიების მიხედვით (30 ფრაზა თითოეულში)
         const quotes = {
             motivation: [
-                "წარმატება იწყება პატარა ნაბიჯებით!",
+                "წარმატება იწყება პატარა ნაბიჯით!",
                 "არ დანებდე, შენ ყველაფერი შეგიძლია!",
-                "დაიჯერე შენი ძალა და იბრძოლე!",
+                "დაიჯერე შენს ძალაში და იბრძოლე!",
                 "ყველაფერი კარგად იქნება, თუ არ გაჩერდები.",
                 "ოცნებები ახდება, როცა ბევრს შრომობ.",
                 "სიცოცხლე სავსეა შესაძლებლობებით!",
@@ -132,21 +132,18 @@
                 "ყოველი დღე არის ახალი შესაძლებლობა!"
             ],
             funny: [
-                "რატომ არის მტევანი ყურძენი? ის ხომ არ მიდის სადღაც?",
                 "შოკოლადი ყოველთვის უკეთესია, ვიდრე პრობლემა.",
-                "ქათამს რატომ გადაკვეთა გზა? იმიტომ რომ ისიც დაბნეული იყო!",
-                "დღეს მაქვს გენიალური იდეა – დავიძინო მთელი დღე!",
-                "სიცილი სჯობს, ვიდრე ტირილი – ნაკლებ ენერგიას ხარჯავს!",
-                "თუ არ ხარ ბედნიერი, მიირთვი ხინკალი და იყავი!",
-                "ბედნიერება პატარა დეტალებშია, მაგალითად, ხაჭაპურში!",
+                "დღეს მაქვს გენიალური იდეა – დავიძინო მთელი დღე",
+                "სიცილი სჯობს, ვიდრე ტირილი – ნაკლებ ენერგიას ხარჯავს",
+                "თუ არ ხარ ბედნიერი, მიირთვი ხინკალი და იყავი",
+                "ბედნიერება პატარა დეტალებშია, მაგალითად, ხაჭაპურში",
                 "რატომ ვჭამ ამდენს? რომ დავფიქრდე პრობლემებზე.",
-                "რატომ გადმოვდივართ სახლში? რომ არ გავჩერდეთ ქუჩაში.",
-                "ვფიქრობ, სარკეში რომ ვიყურები, ჩემი ჩრდილიც იცინის!",
+                "რატომ შევიდვართ სახლში? რომ არ გავჩერდეთ ქუჩაში.",
+                "ვფიქრობ, სარკეში რომ ვიყურები, ჩემი ჩრდილიც იცინის",
                 "ქათამი გადაკვეთა გზას და ფიქრობდა: 'რატომ ვარ ასეთი გემრიელი?'",
                 "ისიც რომ ვიცოდე, რატომ მაცინებს ჩემი მეგობარი?",
-                "კომფორტული დღე იწყება კომფორტული საწოლით!",
+                "კომფორტული დღე იწყება კომფორტული საწოლით",
                 "გოგირდის აბანოები? იდეალური ადგილი დასასვენებლად და ფიქრისთვის.",
-                "კითხვა: რატომ ვარ ასეთი ჭკვიანი? პასუხი: გენიალურად დავიბადე!"
             ],
             facts: [
                 "საქართველო ღვინის სამშობლოა!",
