--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 "თუ არ ხარ ბედნიერი, მიირთვი ხინკალი და იყავი",
                 "ბედნიერება პატარა დეტალებშია, მაგალითად, ხაჭაპურში",
                 "რატომ ვჭამ ამდენს? რომ დავფიქრდე პრობლემებზე.",
-                "რატომ შევიდვართ სახლში? რომ არ გავჩერდეთ ქუჩაში.",
+                "რატომ შევდივართ სახლში? რომ არ გავჩერდეთ ქუჩაში.",
                 "ვფიქრობ, სარკეში რომ ვიყურები, ჩემი ჩრდილიც იცინის",
                 "ქათამი გადაკვეთა გზას და ფიქრობდა: 'რატომ ვარ ასეთი გემრიელი?'",
                 "ისიც რომ ვიცოდე, რატომ მაცინებს ჩემი მეგობარი?",
